skills section is completed

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "antd": "^5.26.4",
     "lottie-react": "^2.4.1",
     "next": "15.3.5",
     "react": "^19.0.0",
